overflow bug fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -218,7 +218,7 @@ a:hover {
 }
 .article {
   align-items: center;
-  overflow: hidden;
+  overflow: auto;
   margin: 3%;
   padding: 2%;
   background: #fff;
